<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.CardView
        android:id="@+id/cv"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        app:cardCornerRadius="6dp"
        app:cardElevation="3dp"
        app:cardUseCompatPadding="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/login_header"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginTop="10dp">

                <View
                    android:layout_width="8dp"
                    android:layout_height="match_parent"
                    android:layout_alignParentStart="true"
                    android:background="#2fa881" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="50dp"
                    android:text="@string/login"
                    android:textColor="#FFCC00"
                    android:textSize="18sp"
                    android:textStyle="bold" />
            </RelativeLayout>

            <LinearLayout
                android:id="@+id/user_name_view"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_above="@+id/user_pass_view"
                android:layout_marginTop="10dp"
                android:layout_centerInParent="true"
                android:orientation="horizontal"
                android:paddingEnd="30dp"
                android:paddingStart="50dp">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="#c5c5c5">

                    <EditText
                        android:id="@+id/et_username"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/selector_bg_edit"
                        android:hint="@string/Username"
                        android:inputType="textPersonName"
                        android:paddingBottom="2dp"
                        android:textColor="#2fa881"
                        android:textCursorDrawable="@drawable/bg_input_cursor"
                        android:textSize="13sp" />
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/user_pass_view"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:orientation="horizontal"
                android:layout_centerInParent="true"
                android:paddingEnd="30dp"
                android:paddingStart="50dp">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="#c5c5c5">

                    <EditText
                        android:id="@+id/et_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/selector_bg_edit"
                        android:hint="@string/Password"
                        android:inputType="textPassword"
                        android:paddingBottom="2dp"
                        android:textColor="#2fa881"
                        android:textCursorDrawable="@drawable/bg_input_cursor"
                        android:textSize="13sp" />
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>



                <Button
                    android:id="@+id/bt_go"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_alignParentBottom="true"
                    android:background="@color/colorPrimary"
                    android:layout_margin="@dimen/activity_horizontal_margin"
                    android:textColor="@color/white"
                    android:stateListAnimator="@drawable/state_list_animator_z"
                    android:text="@string/go"/>

            <TextView
                android:id="@+id/forgot_pass_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="5dp"
                android:layout_alignParentBottom="true"
                android:layout_centerInParent="true"
                android:text="@string/forgot_your_password"
                android:textColor="#9a9a9a"
                android:textSize="12sp" />
        </RelativeLayout>
    </android.support.v7.widget.CardView>

</RelativeLayout>
