<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="@color/white"
    tools:context=".nfc.KadooTagNFCWrite">


    <LinearLayout
        android:id="@+id/activity_arbor_tag_nfcwrite"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"

      >


        <TextView
            android:layout_gravity="center_vertical"
            android:id="@+id/textView"
            android:textSize="18dp"
            android:layout_marginTop="@dimen/fab_margin"
            android:layout_marginBottom="@dimen/fab_margin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/items_inbetween"
            android:text="Aproach the tag to read, or press write to write a tag"
            android:textColor="@color/colorPrimary" />

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin"
            android:orientation="vertical">
            <!--  Email Label -->
            <android.support.design.widget.TextInputLayout
                android:id="@+id/piller_name_tll"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/input_piller_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/piller_name"
                    android:inputType="text" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/create_piller_id_tll"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/input_create_piller_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/create_piller_id"
                    android:inputType="text" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/bet_id_tll"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/input_bet_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/bet_id"
                    android:inputType="text" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/lat_tll"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/input_lat"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/lat"
                    android:inputType="text" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/lng_tll"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/input_lng"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/lng"
                    android:inputType="text" />
            </android.support.design.widget.TextInputLayout>




        </LinearLayout>



       <!-- <TextView
            android:id="@+id/write_lat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:paddingLeft="4dp"
            android:textSize="20sp"
            tools:text="Lat - " />

        <TextView
            android:id="@+id/write_long"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:paddingLeft="4dp"
            android:textSize="20sp"
            tools:text="Lang - " />-->


      <!--  <Button
            android:id="@+id/write_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="write" />-->
        <Button
            android:layout_marginTop="20dp"
            android:enabled="true"
            style="@style/proceedButtonStyle"
            android:id="@+id/btnWriteNFC"
            android:text="Write to NFC"
            android:layout_margin="@dimen/margin"
            android:layout_alignParentBottom="true"
            android:layout_alignLeft="@+id/card_view"
            android:layout_alignStart="@+id/card_view" />

    </LinearLayout>


</android.support.design.widget.CoordinatorLayout>